scripts/gdb: fix interrupts.py after maple tree conversion (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -8572,6 +8572,7 @@
 	patches.kernel.org/6.12.39-088-mm-fix-the-inaccurate-memory-statistics-issue.patch
 	patches.kernel.org/6.12.39-089-scripts-gdb-fix-interrupts-display-after-MCP-.patch
 	patches.kernel.org/6.12.39-090-scripts-gdb-de-reference-per-CPU-MCE-interrup.patch
+	patches.kernel.org/6.12.39-091-scripts-gdb-fix-interrupts.py-after-maple-tre.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
