net: phy: smsc: Fix link failure in forced mode with Auto-MDIX (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -8520,6 +8520,7 @@
 	patches.kernel.org/6.12.39-036-net-stmmac-Fix-interrupt-handling-for-level-t.patch
 	patches.kernel.org/6.12.39-037-net-phy-smsc-Fix-Auto-MDIX-configuration-when.patch
 	patches.kernel.org/6.12.39-038-net-phy-smsc-Force-predictable-MDI-X-state-on.patch
+	patches.kernel.org/6.12.39-039-net-phy-smsc-Fix-link-failure-in-forced-mode-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
