net: mana: Record doorbell physical address in PF mode (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -8631,6 +8631,7 @@
 	patches.kernel.org/6.12.39-147-net-usb-qmi_wwan-add-SIMCom-8230C-composition.patch
 	patches.kernel.org/6.12.39-148-driver-bluetooth-hci_qca-fix-unable-to-load-t.patch
 	patches.kernel.org/6.12.39-149-HID-lenovo-Add-support-for-ThinkPad-X1-Tablet.patch
+	patches.kernel.org/6.12.39-150-net-mana-Record-doorbell-physical-address-in-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
