Revert "drm/xe/xe2: Enable Indirect Ring State support for Xe2" (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -8560,6 +8560,7 @@
 	patches.kernel.org/6.12.39-076-drm-ttm-fix-error-handling-in-ttm_buffer_obje.patch
 	patches.kernel.org/6.12.39-077-drm-gem-Fix-race-in-drm_gem_handle_create_tai.patch
 	patches.kernel.org/6.12.39-078-drm-xe-bmg-fix-compressed-VRAM-handling.patch
+	patches.kernel.org/6.12.39-079-Revert-drm-xe-xe2-Enable-Indirect-Ring-State-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
