drm/nouveau/gsp: fix potential leak of memory used during acpi init (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -8596,6 +8596,7 @@
 	patches.kernel.org/6.12.39-112-wifi-mac80211-correctly-identify-S1G-short-be.patch
 	patches.kernel.org/6.12.39-113-wifi-mac80211-fix-non-transmitted-BSSID-profi.patch
 	patches.kernel.org/6.12.39-114-wifi-rt2x00-fix-remove-callback-type-mismatch.patch
+	patches.kernel.org/6.12.39-115-drm-nouveau-gsp-fix-potential-leak-of-memory-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
