wifi: rt2x00: fix remove callback type mismatch (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -8595,6 +8595,7 @@
 	patches.kernel.org/6.12.39-111-raid10-cleanup-memleak-at-raid10_make_request.patch
 	patches.kernel.org/6.12.39-112-wifi-mac80211-correctly-identify-S1G-short-be.patch
 	patches.kernel.org/6.12.39-113-wifi-mac80211-fix-non-transmitted-BSSID-profi.patch
+	patches.kernel.org/6.12.39-114-wifi-rt2x00-fix-remove-callback-type-mismatch.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
