net: ethernet: ti: am65-cpsw-nuss: Fix skb size by accounting for skb_shared_info (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -8525,6 +8525,7 @@
 	patches.kernel.org/6.12.39-041-atm-clip-Fix-memory-leak-of-struct-clip_vcc.patch
 	patches.kernel.org/6.12.39-042-atm-clip-Fix-infinite-recursive-call-of-clip_.patch
 	patches.kernel.org/6.12.39-043-atm-clip-Fix-NULL-pointer-dereference-in-vcc_.patch
+	patches.kernel.org/6.12.39-044-net-ethernet-ti-am65-cpsw-nuss-Fix-skb-size-b.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
