--- a/series.conf
+++ b/series.conf
@@ -8489,6 +8489,7 @@
 	patches.kernel.org/6.12.39-005-crypto-s390-sha-Fix-uninitialized-variable-in.patch
 	patches.kernel.org/6.12.39-006-drm-amdgpu-Replace-Mutex-with-Spinlock-for-RL.patch
 	patches.kernel.org/6.12.39-007-ASoC-fsl_asrc-use-internal-measured-ratio-for.patch
+	patches.kernel.org/6.12.39-008-ASoC-Intel-SND_SOC_INTEL_SOF_BOARD_HELPERS-se.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
