--- a/series.conf
+++ b/series.conf
@@ -8648,6 +8648,7 @@
 	patches.kernel.org/6.12.39-164-crypto-ecdsa-Harden-against-integer-overflows.patch
 	patches.kernel.org/6.12.39-165-rseq-Fix-segfault-on-registration-when-rseq_c.patch
 	patches.kernel.org/6.12.39-166-KVM-SVM-Set-synthesized-TSA-CPUID-flags.patch
+	patches.kernel.org/6.12.39-167-Linux-6.12.39.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
