--- a/series.conf
+++ b/series.conf
@@ -8644,6 +8644,7 @@
 	patches.kernel.org/6.12.39-160-net-wangxun-revert-the-adjustment-of-the-IRQ-.patch
 	patches.kernel.org/6.12.39-161-kasan-remove-kasan_find_vm_area-to-prevent-po.patch
 	patches.kernel.org/6.12.39-162-ksmbd-fix-potential-use-after-free-in-oplock-.patch
+	patches.kernel.org/6.12.39-163-arm64-Filter-out-SME-hwcaps-when-FEAT_SME-isn.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
