kABI workaround for struct drm_framebuffer changes (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -33657,6 +33657,7 @@
 	patches.kabi/ucsi_ops-adapt-update_connector-to-kABI-consistency.patch
 	patches.kabi/restore-UCSI_CONNECTOR_RESET_HARD-definition.patch
 	patches.kabi/ucsi_operations-add-stubs-for-all-operations.patch
+	patches.kabi/drm_framebuffer-kabi-workaround.patch
 
 	########################################################
 	# SLE15-SP3 OOT performance patches evaluated but left
