--- a/series.conf
+++ b/series.conf
@@ -2218,6 +2218,7 @@
 
 	# generic
 	patches.suse/vfs-add-super_operations-get_inode_dev
+	patches.suse/fs-proc-Use-inode_get_dev-for-device-numbers-in-procm.patch
 
 	# btrfs
 	patches.suse/btrfs-provide-super_operations-get_inode_dev
