fs/proc: Use inode_get_dev() for device numbers in procmap_query (bsc#1246332).

--- a/series.conf
+++ b/series.conf
@@ -123,6 +123,7 @@
 
 	# generic
 	patches.suse/vfs-add-super_operations-get_inode_dev
+	patches.suse/fs-proc-Use-inode_get_dev-for-device-numbers-in-procm.patch
 
 	# btrfs
 	patches.suse/btrfs-provide-super_operations-get_inode_dev
