drm/amdgpu/discovery: use specific ip_discovery.bin for legacy asics (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -52396,6 +52396,7 @@
 	patches.suse/drm-amdgpu-Skip-pcie_replay_count-sysfs-creation-for.patch
 	patches.suse/drm-amdkfd-set-precise-mem-ops-caps-to-disabled-for-.patch
 	patches.suse/drm-amdgpu-discovery-check-ip_discovery-fw-file-avai.patch
+	patches.suse/drm-amdgpu-discovery-use-specific-ip_discovery.bin-f.patch
 	patches.suse/PCI-ACS-Fix-pci-config_acs-parameter.patch
 	patches.suse/PCI-ASPM-Fix-link-state-exit-during-switch-upstream-.patch
 	patches.suse/PCI-Fix-reference-leak-in-pci_register_host_bridge.patch
