Bluetooth: hci_core: add missing braces when using macro parameters (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -54001,6 +54001,7 @@
 	patches.suse/kasan-remove-kasan_find_vm_area-to-prevent-possible-.patch
 	patches.suse/wifi-cfg80211-remove-scan-request-n_channels-counted.patch
 	patches.suse/Bluetooth-btintel-Check-if-controller-is-ISO-capable.patch
+	patches.suse/Bluetooth-hci_core-add-missing-braces-when-using-mac.patch
 
 	########################################################
 	# end of sorted patches
