drm/amdgpu/ip_discovery: add missing ip_discovery fw (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -52712,6 +52712,7 @@
 	patches.suse/drm-amdgpu-mes11-optimize-MES-pipe-FW-version-fetchi.patch
 	patches.suse/drm-amdgpu-immediately-use-GTT-for-new-allocations.patch
 	patches.suse/drm-amdgpu-dma_buf-fix-page_link-check.patch
+	patches.suse/drm-amdgpu-ip_discovery-add-missing-ip_discovery-fw.patch
 	patches.suse/drm-amd-display-Do-not-enable-Replay-and-PSR-while-V.patch
 	patches.suse/drm-amd-display-Protect-FPU-in-dml21_copy.patch
 	patches.suse/drm-amd-display-Protect-FPU-in-dml2_init-dml21_init.patch
