--- a/series.conf
+++ b/series.conf
@@ -53983,6 +53983,7 @@
 	patches.suse/wifi-cfg80211-fix-S1G-beacon-head-validation-in-nl80.patch
 	patches.suse/wifi-zd1211rw-Fix-potential-NULL-pointer-dereference.patch
 	patches.suse/wifi-mac80211-fix-non-transmitted-BSSID-profile-sear.patch
+	patches.suse/wifi-rt2x00-fix-remove-callback-type-mismatch.patch
 	patches.suse/wifi-mt76-mt7925-fix-the-wrong-config-for-tx-interru.patch
 	patches.suse/wifi-mt76-mt7925-fix-invalid-array-index-in-ssid-ass.patch
 	patches.suse/wifi-mt76-mt7925-Fix-null-ptr-deref-in-mt7925_therma.patch
