--- a/series.conf
+++ b/series.conf
@@ -54000,6 +54000,7 @@
 	patches.suse/maple_tree-fix-mt_destroy_walk-on-root-leaf-node.patch
 	patches.suse/kasan-remove-kasan_find_vm_area-to-prevent-possible-.patch
 	patches.suse/wifi-cfg80211-remove-scan-request-n_channels-counted.patch
+	patches.suse/Bluetooth-btintel-Check-if-controller-is-ISO-capable.patch
 
 	########################################################
 	# end of sorted patches
