--- a/series.conf
+++ b/series.conf
@@ -53665,6 +53665,7 @@
 	patches.suse/vmxnet3-correctly-report-gso-type-for-UDP-tunnels.patch
 	patches.suse/gve-add-missing-NULL-check-for-gve_alloc_pending_pac.patch
 	patches.suse/netfilter-nf_set_pipapo_avx2-fix-initial-map-fill.patch
+	patches.suse/wifi-cfg80211-mac80211-correctly-parse-S1G-beacon-op.patch
 	patches.suse/calipso-unlock-rcu-before-returning-EAFNOSUPPORT.patch
 	patches.suse/PM-sleep-Fix-power.is_suspended-cleanup-for-direct-c.patch
 	patches.suse/drm-i915-gem-Allow-EXEC_CAPTURE-on-recoverable-conte.patch
