- wifi: cfg80211: remove scan request n_channels counted_by   (git-fixes). - Refresh patches.suse/wireless-suse-kabi-padding.patch.

--- a/series.conf
+++ b/series.conf
@@ -53999,6 +53999,7 @@
 	patches.suse/drm-imagination-Fix-kernel-crash-when-hard-resetting.patch
 	patches.suse/maple_tree-fix-mt_destroy_walk-on-root-leaf-node.patch
 	patches.suse/kasan-remove-kasan_find_vm_area-to-prevent-possible-.patch
+	patches.suse/wifi-cfg80211-remove-scan-request-n_channels-counted.patch
 
 	########################################################
 	# end of sorted patches
