--- a/series.conf
+++ b/series.conf
@@ -10058,6 +10058,7 @@
 	patches.suse/drm-gem-Fix-race-in-drm_gem_handle_create_tail.patch
 	patches.suse/maple_tree-fix-mt_destroy_walk-on-root-leaf-node.patch
 	patches.suse/kasan-remove-kasan_find_vm_area-to-prevent-possible-.patch
+	patches.suse/clk-scmi-Handle-case-where-child-clocks-are-initiali.patch
 	patches.suse/dm-bufio-fix-sched-in-atomic-context.patch
 	patches.suse/HID-core-ensure-__hid_request-reserves-the-report-ID.patch
 	patches.suse/soc-aspeed-lpc-snoop-Cleanup-resources-in-stack-orde.patch
