vt: add missing notification when switching back to text mode (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -9914,6 +9914,7 @@
 	patches.suse/i2c-robotfuzz-osif-disable-zero-length-read-messages.patch
 	patches.suse/i2c-tiny-usb-disable-zero-length-read-messages.patch
 	patches.suse/perf-aux-Fix-pending-disable-flow-when-the-AUX-ring-buffer.patch
+	patches.suse/vt-add-missing-notification-when-switching-back-to-t.patch
 	patches.suse/serial-core-restore-of_node-information-in-sysfs.patch
 	patches.suse/serial-imx-Restore-original-RXTL-for-console-to-fix-.patch
 	patches.suse/staging-rtl8723bs-Avoid-memset-in-aes_cipher-and-aes.patch
