--- a/series.conf
+++ b/series.conf
@@ -10031,6 +10031,7 @@
 	patches.suse/net-phy-smsc-Fix-Auto-MDIX-configuration-when-disabl.patch
 	patches.suse/net-phy-smsc-Force-predictable-MDI-X-state-on-LAN87x.patch
 	patches.suse/net-phy-smsc-Fix-link-failure-in-forced-mode-with-Au.patch
+	patches.suse/wifi-cfg80211-fix-S1G-beacon-head-validation-in-nl80.patch
 	patches.suse/wifi-zd1211rw-Fix-potential-NULL-pointer-dereference.patch
 	patches.suse/wifi-mac80211-fix-non-transmitted-BSSID-profile-sear.patch
 	patches.suse/wifi-mwifiex-discard-erroneous-disassoc-frames-on-ST.patch
