--- a/series.conf
+++ b/series.conf
@@ -9959,6 +9959,7 @@
 	patches.suse/drm-bridge-panel-move-prepare_prev_first-handling-to.patch
 	patches.suse/drm-bridge-aux-hpd-bridge-fix-assignment-of-the-of_n.patch
 	patches.suse/drm-sched-Increment-job-count-before-swapping-tail-s.patch
+	patches.suse/drm-gem-Acquire-references-on-GEM-handles-for-frameb.patch
 	patches.suse/drm-v3d-Disable-interrupts-before-resetting-the-GPU.patch
 	patches.suse/drm-i915-selftests-Change-mock_request-to-return-err.patch
 	patches.suse/drm-i915-gt-Fix-timeline-left-held-on-VMA-alloc-erro.patch
