ASoC: Intel: soc-acpi: arl: Correct naming of a cs35l56 address struct (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -4728,6 +4728,7 @@
 	patches.suse/ASoC-wcd937x-Use-y-for-Makefile.patch
 	patches.suse/ASoC-Intel-sof_sdw-correct-mach_params-dmic_num.patch
 	patches.suse/ASoC-Intel-sof_sdw-Correct-quirk-for-Lenovo-Yoga-Sli.patch
+	patches.suse/ASoC-Intel-soc-acpi-arl-Correct-naming-of-a-cs35l56-.patch
 	patches.suse/ASoC-sun4i-spdif-Add-clock-multiplier-settings.patch
 	patches.suse/ASoC-fsl_utils-Add-function-to-constrain-rates.patch
 	patches.suse/ASoC-fsl_sai-Add-sample-rate-constraint.patch
