--- a/series.conf
+++ b/series.conf
@@ -9891,6 +9891,7 @@
 	patches.suse/HID-Add-IGNORE-quirk-for-SMARTLINKTECHNOLOGY.patch
 	patches.suse/HID-lenovo-Restrict-F7-9-11-mode-to-compact-keyboard.patch
 	patches.suse/HID-wacom-fix-crash-in-wacom_aes_battery_handler.patch
+	patches.suse/HID-lenovo-Add-support-for-ThinkPad-X1-Tablet-Thin-K.patch
 	patches.suse/ALSA-hda-realtek-Add-quirks-for-some-Clevo-laptops.patch
 	patches.suse/ALSA-hda-realtek-Enable-mute-LED-on-HP-Pavilion-Lapt.patch
 	patches.suse/ALSA-usb-audio-Fix-out-of-bounds-read-in-snd_usb_get.patch
