can: tcan4x5x: fix reset gpio usage during probe (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -10066,6 +10066,7 @@
 	patches.suse/soc-aspeed-lpc-snoop-Don-t-disable-channels-that-are.patch
 	patches.suse/net-phy-Don-t-register-LEDs-for-genphy.patch
 	patches.suse/usb-net-sierra-check-for-no-status-endpoint.patch
+	patches.suse/can-tcan4x5x-fix-reset-gpio-usage-during-probe.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Revise-logging-format-for-failed-CT-MIB-re.patch
