--- a/series.conf
+++ b/series.conf
@@ -10054,6 +10054,7 @@
 	patches.suse/drm-xe-pm-Correct-comment-of-xe_pm_set_vram_threshol.patch
 	patches.suse/drm-tegra-nvdec-Fix-dma_alloc_coherent-error-check.patch
 	patches.suse/drm-imagination-Fix-kernel-crash-when-hard-resetting.patch
+	patches.suse/drm-framebuffer-Acquire-internal-references-on-GEM-h.patch
 	patches.suse/maple_tree-fix-mt_destroy_walk-on-root-leaf-node.patch
 	patches.suse/kasan-remove-kasan_find_vm_area-to-prevent-possible-.patch
 	patches.suse/dm-bufio-fix-sched-in-atomic-context.patch
