--- a/series.conf
+++ b/series.conf
@@ -9895,6 +9895,7 @@
 	patches.suse/ALSA-hda-realtek-Add-quirks-for-some-Clevo-laptops.patch
 	patches.suse/ALSA-hda-realtek-Enable-mute-LED-on-HP-Pavilion-Lapt.patch
 	patches.suse/ALSA-usb-audio-Fix-out-of-bounds-read-in-snd_usb_get.patch
+	patches.suse/ALSA-hda-realtek-Add-mic-mute-LED-setup-for-ASUS-UM5.patch
 	patches.suse/ASoC-amd-yc-Add-DMI-quirk-for-Lenovo-IdeaPad-Slim-5-.patch
 	patches.suse/ALSA-hda-realtek-Fix-built-in-mic-on-ASUS-VivoBook-X-7ab6847.patch
 	patches.suse/s390-pkey-Prevent-overflow-in-size-calculation-for-memdup_.patch
