--- a/series.conf
+++ b/series.conf
@@ -10071,6 +10071,7 @@
 	patches.suse/Bluetooth-Fix-null-ptr-deref-in-l2cap_sock_resume_cb.patch
 	patches.suse/Bluetooth-hci_sync-fix-connectable-extended-advertis.patch
 	patches.suse/Bluetooth-btintel-Check-if-controller-is-ISO-capable.patch
+	patches.suse/Bluetooth-SMP-If-an-unallowed-command-is-received-co.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Revise-logging-format-for-failed-CT-MIB-re.patch
