wifi: prevent A-MSDU attacks in mesh networks (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -10037,6 +10037,7 @@
 	patches.suse/wifi-mac80211-fix-non-transmitted-BSSID-profile-sear.patch
 	patches.suse/wifi-mwifiex-discard-erroneous-disassoc-frames-on-ST.patch
 	patches.suse/wifi-rt2x00-fix-remove-callback-type-mismatch.patch
+	patches.suse/wifi-prevent-A-MSDU-attacks-in-mesh-networks.patch
 	patches.suse/wifi-mt76-mt7925-fix-the-wrong-config-for-tx-interru.patch
 	patches.suse/wifi-mt76-mt7925-fix-invalid-array-index-in-ssid-ass.patch
 	patches.suse/wifi-mt76-mt7925-prevent-NULL-pointer-dereference-in.patch
