Bluetooth: SMP: Fix using HCI_ERROR_REMOTE_USER_TERM on timeout (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -10072,6 +10072,7 @@
 	patches.suse/Bluetooth-hci_sync-fix-connectable-extended-advertis.patch
 	patches.suse/Bluetooth-btintel-Check-if-controller-is-ISO-capable.patch
 	patches.suse/Bluetooth-SMP-If-an-unallowed-command-is-received-co.patch
+	patches.suse/Bluetooth-SMP-Fix-using-HCI_ERROR_REMOTE_USER_TERM-o.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Revise-logging-format-for-failed-CT-MIB-re.patch
