--- a/series.conf
+++ b/series.conf
@@ -10025,6 +10025,7 @@
 	patches.suse/pinctrl-qcom-msm-mark-certain-pins-as-invalid-for-in.patch
 	patches.suse/pinctrl-amd-Clear-GPIO-debounce-for-suspend.patch
 	patches.suse/net-phy-qcom-move-the-WoL-function-to-shared-library.patch
+	patches.suse/net-phy-qcom-qca808x-Fix-WoL-issue-by-utilizing-at80.patch
 	patches.suse/Bluetooth-hci_sync-Fix-not-disabling-advertising-ins.patch
 	patches.suse/Bluetooth-hci_event-Fix-not-marking-Broadcast-Sink-B.patch
 	patches.suse/net-phy-smsc-Fix-Auto-MDIX-configuration-when-disabl.patch
