--- a/series.conf
+++ b/series.conf
@@ -10074,6 +10074,7 @@
 	patches.suse/Bluetooth-SMP-If-an-unallowed-command-is-received-co.patch
 	patches.suse/Bluetooth-SMP-Fix-using-HCI_ERROR_REMOTE_USER_TERM-o.patch
 	patches.suse/Bluetooth-hci_core-add-missing-braces-when-using-mac.patch
+	patches.suse/Bluetooth-btusb-QCA-Fix-downloading-wrong-NVM-for-WC.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Revise-logging-format-for-failed-CT-MIB-re.patch
