--- a/series.conf
+++ b/series.conf
@@ -10068,6 +10068,7 @@
 	patches.suse/usb-net-sierra-check-for-no-status-endpoint.patch
 	patches.suse/can-tcan4x5x-fix-reset-gpio-usage-during-probe.patch
 	patches.suse/wifi-cfg80211-remove-scan-request-n_channels-counted.patch
+	patches.suse/Bluetooth-Fix-null-ptr-deref-in-l2cap_sock_resume_cb.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Revise-logging-format-for-failed-CT-MIB-re.patch
