--- a/series.conf
+++ b/series.conf
@@ -10000,6 +10000,7 @@
 	patches.suse/spi-spi-fsl-dspi-Clear-completion-counter-before-ini.patch
 	patches.suse/regulator-gpio-Fix-the-out-of-bounds-access-to-drvda.patch
 	patches.suse/firmware-arm_ffa-Fix-memory-leak-by-freeing-notifier.patch
+	patches.suse/Revert-ACPI-battery-negate-current-when-discharging.patch
 	patches.suse/powercap-intel_rapl-Do-not-change-CLAMPING-bit-if-EN.patch
 	patches.suse/i2c-designware-Fix-an-initialization-issue.patch
 	patches.suse/perf-core-Fix-the-WARN_ON_ONCE-is-out-of-lock-protected-region.patch
