net: usb: qmi_wwan: add SIMCom 8230C composition (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -9874,6 +9874,7 @@
 	patches.suse/scsi-megaraid_sas-Fix-invalid-node-index.patch
 	patches.suse/spi-spi-cadence-quadspi-Fix-pm-runtime-unbalance.patch
 	patches.suse/msft-hv-3283-net-mana-Record-doorbell-physical-address-in-PF-mode.patch
+	patches.suse/net-usb-qmi_wwan-add-SIMCom-8230C-composition.patch
 	patches.suse/Bluetooth-L2CAP-Fix-L2CAP-MTU-negotiation.patch
 	patches.suse/bnxt-properly-flush-XDP-redirect-lists.patch
 	patches.suse/wifi-mac80211-fix-beacon-interval-calculation-overfl.patch
