drm/gem: Fix race in drm_gem_handle_create_tail() (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -10055,6 +10055,7 @@
 	patches.suse/drm-tegra-nvdec-Fix-dma_alloc_coherent-error-check.patch
 	patches.suse/drm-imagination-Fix-kernel-crash-when-hard-resetting.patch
 	patches.suse/drm-framebuffer-Acquire-internal-references-on-GEM-h.patch
+	patches.suse/drm-gem-Fix-race-in-drm_gem_handle_create_tail.patch
 	patches.suse/maple_tree-fix-mt_destroy_walk-on-root-leaf-node.patch
 	patches.suse/kasan-remove-kasan_find_vm_area-to-prevent-possible-.patch
 	patches.suse/dm-bufio-fix-sched-in-atomic-context.patch
