--- a/series.conf
+++ b/series.conf
@@ -10070,6 +10070,7 @@
 	patches.suse/wifi-cfg80211-remove-scan-request-n_channels-counted.patch
 	patches.suse/Bluetooth-Fix-null-ptr-deref-in-l2cap_sock_resume_cb.patch
 	patches.suse/Bluetooth-hci_sync-fix-connectable-extended-advertis.patch
+	patches.suse/Bluetooth-btintel-Check-if-controller-is-ISO-capable.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Revise-logging-format-for-failed-CT-MIB-re.patch
