Bluetooth: hci_sync: fix connectable extended advertising when using static random address (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -10069,6 +10069,7 @@
 	patches.suse/can-tcan4x5x-fix-reset-gpio-usage-during-probe.patch
 	patches.suse/wifi-cfg80211-remove-scan-request-n_channels-counted.patch
 	patches.suse/Bluetooth-Fix-null-ptr-deref-in-l2cap_sock_resume_cb.patch
+	patches.suse/Bluetooth-hci_sync-fix-connectable-extended-advertis.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Revise-logging-format-for-failed-CT-MIB-re.patch
