wifi: cfg80211/mac80211: correctly parse S1G beacon optional elements (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -9606,6 +9606,7 @@
 	patches.suse/gve-add-missing-NULL-check-for-gve_alloc_pending_pac.patch
 	patches.suse/net-wwan-mhi_wwan_mbim-use-correct-mux_id-for-multip.patch
 	patches.suse/netfilter-nf_set_pipapo_avx2-fix-initial-map-fill.patch
+	patches.suse/wifi-cfg80211-mac80211-correctly-parse-S1G-beacon-op.patch
 	patches.suse/iavf-iavf_suspend-take-RTNL-before-netdev_lock.patch
 	patches.suse/calipso-unlock-rcu-before-returning-EAFNOSUPPORT.patch
 	patches.suse/PM-sleep-Fix-power.is_suspended-cleanup-for-direct-c.patch
