Bluetooth: hci_core: add missing braces when using macro parameters (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -10073,6 +10073,7 @@
 	patches.suse/Bluetooth-btintel-Check-if-controller-is-ISO-capable.patch
 	patches.suse/Bluetooth-SMP-If-an-unallowed-command-is-received-co.patch
 	patches.suse/Bluetooth-SMP-Fix-using-HCI_ERROR_REMOTE_USER_TERM-o.patch
+	patches.suse/Bluetooth-hci_core-add-missing-braces-when-using-mac.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Revise-logging-format-for-failed-CT-MIB-re.patch
