--- a/series.conf
+++ b/series.conf
@@ -9902,6 +9902,7 @@
 	patches.suse/ALSA-hda-realtek-Fix-built-in-mic-on-ASUS-VivoBook-X-7ab6847.patch
 	patches.suse/s390-pkey-Prevent-overflow-in-size-calculation-for-memdup_.patch
 	patches.suse/ata-ahci-Use-correct-DMI-identifier-for-ASUSPRO-D840.patch
+	patches.suse/Revert-PCI-ACPI-Fix-allocated-memory-release-on-erro.patch
 	patches.suse/drm-amd-Adjust-output-for-discovery-error-handling.patch
 	patches.suse/drm-i915-fix-build-error-some-more.patch
 	patches.suse/drm-xe-display-Add-check-for-alloc_ordered_workqueue.patch
