--- a/series.conf
+++ b/series.conf
@@ -10075,6 +10075,7 @@
 	patches.suse/Bluetooth-SMP-Fix-using-HCI_ERROR_REMOTE_USER_TERM-o.patch
 	patches.suse/Bluetooth-hci_core-add-missing-braces-when-using-mac.patch
 	patches.suse/Bluetooth-btusb-QCA-Fix-downloading-wrong-NVM-for-WC.patch
+	patches.suse/Bluetooth-L2CAP-Fix-attempting-to-adjust-outgoing-MT.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Revise-logging-format-for-failed-CT-MIB-re.patch
