ASoC: SOF: Intel: hda: Use devm_kstrdup() to avoid memleak (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -9898,6 +9898,7 @@
 	patches.suse/ALSA-hda-realtek-Add-mic-mute-LED-setup-for-ASUS-UM5.patch
 	patches.suse/ASoC-amd-yc-add-quirk-for-Acer-Nitro-ANV15-41-intern.patch
 	patches.suse/ASoC-amd-yc-Add-DMI-quirk-for-Lenovo-IdeaPad-Slim-5-.patch
+	patches.suse/ASoC-SOF-Intel-hda-Use-devm_kstrdup-to-avoid-memleak.patch
 	patches.suse/ALSA-hda-realtek-Fix-built-in-mic-on-ASUS-VivoBook-X-7ab6847.patch
 	patches.suse/s390-pkey-Prevent-overflow-in-size-calculation-for-memdup_.patch
 	patches.suse/ata-ahci-Use-correct-DMI-identifier-for-ASUSPRO-D840.patch
