--- a/series.conf
+++ b/series.conf
@@ -4729,6 +4729,7 @@
 	patches.suse/ASoC-Intel-sof_sdw-correct-mach_params-dmic_num.patch
 	patches.suse/ASoC-Intel-sof_sdw-Correct-quirk-for-Lenovo-Yoga-Sli.patch
 	patches.suse/ASoC-Intel-soc-acpi-arl-Correct-naming-of-a-cs35l56-.patch
+	patches.suse/ASoC-Intel-soc-acpi-arl-Add-match-entries-for-new-cs.patch
 	patches.suse/ASoC-sun4i-spdif-Add-clock-multiplier-settings.patch
 	patches.suse/ASoC-fsl_utils-Add-function-to-constrain-rates.patch
 	patches.suse/ASoC-fsl_sai-Add-sample-rate-constraint.patch
