kABI workaround for struct drm_framebuffer changes (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -10521,6 +10521,7 @@
 	patches.kabi/kabi-restore-encap_sk-in-struct-xfrm_state.patch
 	patches.suse/kabi-fix-dm-fix-dm_blk_report_zones.patch
 	patches.kabi/bpf-Do-not-include-stack-ptr-register-in-precision-b.patch
+	patches.kabi/drm_framebuffer-kabi-workaround.patch
 
 	########################################################
 	# preempt-rt backport converged
