blacklist.conf: skip ieee80211 flex array change
Skip the commit a85b8544d463 that is cosmetic but causing kABI breakage

--- a/blacklist.conf
+++ b/blacklist.conf
@@ -240,6 +240,7 @@ bd2703b42decebdcddf76e277ba76b4c4a142d73 # Require complex backport for not much
 422c9727b07f9f86e2ec11c56622e566221591cc # no b63e6f60eab4
 98d4435efcbf37801a3246fb53856c4b934a2613 # f5f80e32de12fad2813d37270e8364a03e6d3ef0 isn't backported, causes kabi breakage
 aabd3be90579ed088aa34f0584ab6836c735c76f # ath12k: inapplicable
+a85b8544d46390469b6ca72d6bfd3ecb7be985ff # ieee80211: cosmetic change, causing kABI breakage
 
 # SLE15-SP6
 adfbae9ffe339eed08d54a4eb87c93f4b35f214b # drm/i915: cherry-picked d1691bb22eba23a0131f1bde41d268bb0ebb0f59
