sched/deadline: Less agressive dl_server handling KABI (bsc#1234634 (Scheduler functional and performance backports)).

--- a/series.conf
+++ b/series.conf
@@ -10181,6 +10181,7 @@
 
 	# KABI
 	patches.suse/sched-fair-Workaround-NO_RUN_TO_PARITY-fix-kabi.patch
+	patches.suse/sched-deadline-Less-agressive-dl_server-handling-KABI.patch
 
 	########################################################
 	# Memory management
