net/sched: sch_qfq: Fix race condition on qfq_aggregate (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -10040,6 +10040,7 @@
 	patches.suse/HID-core-ensure-__hid_request-reserves-the-report-ID.patch
 	patches.suse/soc-aspeed-lpc-snoop-Cleanup-resources-in-stack-orde.patch
 	patches.suse/soc-aspeed-lpc-snoop-Don-t-disable-channels-that-are.patch
+	patches.suse/net-sched-sch_qfq-Fix-race-condition-on-qfq_aggregat.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Revise-logging-format-for-failed-CT-MIB-re.patch
