--- a/series.conf
+++ b/series.conf
@@ -10041,6 +10041,7 @@
 	patches.suse/soc-aspeed-lpc-snoop-Cleanup-resources-in-stack-orde.patch
 	patches.suse/soc-aspeed-lpc-snoop-Don-t-disable-channels-that-are.patch
 	patches.suse/net-sched-sch_qfq-Fix-race-condition-on-qfq_aggregat.patch
+	patches.suse/af_packet-fix-the-SO_SNDTIMEO-constraint-not-effecti.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Revise-logging-format-for-failed-CT-MIB-re.patch
