rpl: Fix use-after-free in rpl_do_srh_inline() (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -10042,6 +10042,7 @@
 	patches.suse/soc-aspeed-lpc-snoop-Don-t-disable-channels-that-are.patch
 	patches.suse/net-sched-sch_qfq-Fix-race-condition-on-qfq_aggregat.patch
 	patches.suse/af_packet-fix-the-SO_SNDTIMEO-constraint-not-effecti.patch
+	patches.suse/rpl-Fix-use-after-free-in-rpl_do_srh_inline.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Revise-logging-format-for-failed-CT-MIB-re.patch
