--- a/series.conf
+++ b/series.conf
@@ -10043,6 +10043,7 @@
 	patches.suse/net-sched-sch_qfq-Fix-race-condition-on-qfq_aggregat.patch
 	patches.suse/af_packet-fix-the-SO_SNDTIMEO-constraint-not-effecti.patch
 	patches.suse/rpl-Fix-use-after-free-in-rpl_do_srh_inline.patch
+	patches.suse/ipv6-mcast-Delay-put-pmc-idev-in-mld_del_delrec.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Revise-logging-format-for-failed-CT-MIB-re.patch
