net: fix segmentation after TCP/UDP fraglist GRO (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -10044,6 +10044,7 @@
 	patches.suse/af_packet-fix-the-SO_SNDTIMEO-constraint-not-effecti.patch
 	patches.suse/rpl-Fix-use-after-free-in-rpl_do_srh_inline.patch
 	patches.suse/ipv6-mcast-Delay-put-pmc-idev-in-mld_del_delrec.patch
+	patches.suse/net-fix-segmentation-after-TCP-UDP-fraglist-GRO.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Revise-logging-format-for-failed-CT-MIB-re.patch
