net/sched: Return NULL when htb_lookup_leaf encounters an empty rbtree (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -10045,6 +10045,7 @@
 	patches.suse/rpl-Fix-use-after-free-in-rpl_do_srh_inline.patch
 	patches.suse/ipv6-mcast-Delay-put-pmc-idev-in-mld_del_delrec.patch
 	patches.suse/net-fix-segmentation-after-TCP-UDP-fraglist-GRO.patch
+	patches.suse/net-sched-Return-NULL-when-htb_lookup_leaf-encounter.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Revise-logging-format-for-failed-CT-MIB-re.patch
