rpl: Fix use-after-free in rpl_do_srh_inline() (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -33059,6 +33059,7 @@
 	patches.suse/soc-aspeed-lpc-snoop-Don-t-disable-channels-that-are.patch
 	patches.suse/net-sched-sch_qfq-Fix-race-condition-on-qfq_aggregat.patch
 	patches.suse/af_packet-fix-the-SO_SNDTIMEO-constraint-not-effecti.patch
+	patches.suse/rpl-Fix-use-after-free-in-rpl_do_srh_inline.patch
 	patches.suse/net-phy-Don-t-register-LEDs-for-genphy.patch
 	patches.suse/usb-net-sierra-check-for-no-status-endpoint.patch
 	patches.suse/Bluetooth-Fix-null-ptr-deref-in-l2cap_sock_resume_cb.patch
