--- a/series.conf
+++ b/series.conf
@@ -33062,6 +33062,7 @@
 	patches.suse/rpl-Fix-use-after-free-in-rpl_do_srh_inline.patch
 	patches.suse/net-phy-Don-t-register-LEDs-for-genphy.patch
 	patches.suse/usb-net-sierra-check-for-no-status-endpoint.patch
+	patches.suse/ipv6-mcast-Delay-put-pmc-idev-in-mld_del_delrec.patch
 	patches.suse/Bluetooth-Fix-null-ptr-deref-in-l2cap_sock_resume_cb.patch
 	patches.suse/Bluetooth-hci_sync-fix-connectable-extended-advertis.patch
 	patches.suse/Bluetooth-SMP-If-an-unallowed-command-is-received-co.patch
