sched: Skip useless sched_balance_running acquisition if load balance is not due (bsc#1234634 (Scheduler functional and performance backports)).

--- a/series.conf
+++ b/series.conf
@@ -10179,6 +10179,10 @@
 	patches.suse/sched-fair-Enable-scheduler-feature-NEXT_BUDDY.patch
 	patches.suse/sched-fair-Reimplement-NEXT_BUDDY-to-align-with-EEVDF-goals.patch
 
+	# Under review patch that reduces cache line misses on
+	# overloaded systems during LB
+	patches.suse/sched-Skip-useless-sched_balance_running-acquisition-if-load-balance-is-not-due.patch
+
 	# KABI
 	patches.suse/sched-fair-Workaround-NO_RUN_TO_PARITY-fix-kabi.patch
 	patches.suse/sched-deadline-Less-agressive-dl_server-handling-KABI.patch
