--- a/series.conf
+++ b/series.conf
@@ -10186,6 +10186,7 @@
 	# KABI
 	patches.suse/sched-fair-Workaround-NO_RUN_TO_PARITY-fix-kabi.patch
 	patches.suse/sched-deadline-Less-agressive-dl_server-handling-KABI.patch
+	patches.suse/sched-psi-Optimize-psi_group_change-cpu_clock-usage-KABI.patch
 
 	########################################################
 	# Memory management
