--- a/series.conf
+++ b/series.conf
@@ -9870,6 +9870,7 @@
 	patches.suse/spi-spi-cadence-quadspi-Fix-pm-runtime-unbalance.patch
 	patches.suse/msft-hv-3283-net-mana-Record-doorbell-physical-address-in-PF-mode.patch
 	patches.suse/af_unix-Don-t-leave-consecutive-consumed-OOB-skbs.patch
+	patches.suse/af_unix-Don-t-set-ECONNRESET-for-consumed-OOB-skb.patch
 	patches.suse/Bluetooth-L2CAP-Fix-L2CAP-MTU-negotiation.patch
 	patches.suse/bnxt-properly-flush-XDP-redirect-lists.patch
 	patches.suse/wifi-mac80211-fix-beacon-interval-calculation-overfl.patch
