--- a/series.conf
+++ b/series.conf
@@ -9931,6 +9931,7 @@
 	patches.suse/rose-fix-dangling-neighbour-pointers-in-rose_rt_devi.patch
 	patches.suse/virtio-net-ensure-the-received-length-does-not-excee.patch
 	patches.suse/virtio-net-xsk-rx-fix-the-frame-s-length-check.patch
+	patches.suse/vsock-vmci-Clear-the-vmci-transport-packet-properly-.patch
 	patches.suse/scsi-qla2xxx-Fix-DMA-mapping-test-in-qla24xx_get_port_data.patch
 	patches.suse/scsi-qla4xxx-Fix-missing-DMA-mapping-error-in-qla4xxx_allo.patch
 	patches.suse/scsi-sd-Fix-VPD-page-0xb7-length-check.patch
