--- a/series.conf
+++ b/series.conf
@@ -10013,6 +10013,7 @@
 	patches.suse/Bluetooth-hci_event-Fix-not-marking-Broadcast-Sink-B.patch
 	patches.suse/vsock-Fix-transport_-g2h-h2g-TOCTOU.patch
 	patches.suse/vsock-Fix-transport_-TOCTOU.patch
+	patches.suse/vsock-Fix-IOCTL_VM_SOCKETS_GET_LOCAL_CID-to-check-al.patch
 	patches.suse/net-phy-smsc-Fix-Auto-MDIX-configuration-when-disabl.patch
 	patches.suse/net-phy-smsc-Force-predictable-MDI-X-state-on-LAN87x.patch
 	patches.suse/net-phy-smsc-Fix-link-failure-in-forced-mode-with-Au.patch
