--- a/series.conf
+++ b/series.conf
@@ -10043,6 +10043,7 @@
 	patches.suse/HID-core-ensure-__hid_request-reserves-the-report-ID.patch
 	patches.suse/soc-aspeed-lpc-snoop-Cleanup-resources-in-stack-orde.patch
 	patches.suse/soc-aspeed-lpc-snoop-Don-t-disable-channels-that-are.patch
+	patches.suse/virtio-net-fix-recursived-rtnl_lock-during-probe.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Revise-logging-format-for-failed-CT-MIB-re.patch
