mmc: sdhci-pci: Quirk for broken command queuing on Intel GLK-based Positivo models (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -33071,6 +33071,7 @@
 	patches.suse/Bluetooth-SMP-Fix-using-HCI_ERROR_REMOTE_USER_TERM-o.patch
 	patches.suse/Bluetooth-btusb-QCA-Fix-downloading-wrong-NVM-for-WC.patch
 	patches.suse/Bluetooth-L2CAP-Fix-attempting-to-adjust-outgoing-MT.patch
+	patches.suse/mmc-sdhci-pci-Quirk-for-broken-command-queuing-on-In.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Revise-logging-format-for-failed-CT-MIB-re.patch
