--- a/series.conf
+++ b/series.conf
@@ -33078,6 +33078,7 @@
 	patches.suse/phy-tegra-xusb-Fix-unbalanced-regulator-disable-in-U.patch
 	patches.suse/dmaengine-nbpfaxi-Fix-memory-corruption-in-probe.patch
 	patches.suse/soundwire-amd-fix-for-clearing-command-status-regist.patch
+	patches.suse/drm-amdgpu-gfx8-reset-compute-ring-wptr-on-the-GPU-o.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Revise-logging-format-for-failed-CT-MIB-re.patch
