dmaengine: nbpfaxi: Fix memory corruption in probe() (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -33076,6 +33076,7 @@
 	patches.suse/mmc-bcm2835-Fix-dma_unmap_sg-nents-value.patch
 	patches.suse/memstick-core-Zero-initialize-id_reg-in-h_memstick_r.patch
 	patches.suse/phy-tegra-xusb-Fix-unbalanced-regulator-disable-in-U.patch
+	patches.suse/dmaengine-nbpfaxi-Fix-memory-corruption-in-probe.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Revise-logging-format-for-failed-CT-MIB-re.patch
