mmc: bcm2835: Fix dma_unmap_sg() nents value (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -33073,6 +33073,7 @@
 	patches.suse/Bluetooth-L2CAP-Fix-attempting-to-adjust-outgoing-MT.patch
 	patches.suse/mmc-sdhci-pci-Quirk-for-broken-command-queuing-on-In.patch
 	patches.suse/mmc-sdhci_am654-Workaround-for-Errata-i2312.patch
+	patches.suse/mmc-bcm2835-Fix-dma_unmap_sg-nents-value.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Revise-logging-format-for-failed-CT-MIB-re.patch
