--- a/series.conf
+++ b/series.conf
@@ -33075,6 +33075,7 @@
 	patches.suse/mmc-sdhci_am654-Workaround-for-Errata-i2312.patch
 	patches.suse/mmc-bcm2835-Fix-dma_unmap_sg-nents-value.patch
 	patches.suse/memstick-core-Zero-initialize-id_reg-in-h_memstick_r.patch
+	patches.suse/phy-tegra-xusb-Fix-unbalanced-regulator-disable-in-U.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Revise-logging-format-for-failed-CT-MIB-re.patch
