--- a/series.conf
+++ b/series.conf
@@ -33077,6 +33077,7 @@
 	patches.suse/memstick-core-Zero-initialize-id_reg-in-h_memstick_r.patch
 	patches.suse/phy-tegra-xusb-Fix-unbalanced-regulator-disable-in-U.patch
 	patches.suse/dmaengine-nbpfaxi-Fix-memory-corruption-in-probe.patch
+	patches.suse/soundwire-amd-fix-for-clearing-command-status-regist.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Revise-logging-format-for-failed-CT-MIB-re.patch
