memstick: core: Zero initialize id_reg in h_memstick_read_dev_id() (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -33074,6 +33074,7 @@
 	patches.suse/mmc-sdhci-pci-Quirk-for-broken-command-queuing-on-In.patch
 	patches.suse/mmc-sdhci_am654-Workaround-for-Errata-i2312.patch
 	patches.suse/mmc-bcm2835-Fix-dma_unmap_sg-nents-value.patch
+	patches.suse/memstick-core-Zero-initialize-id_reg-in-h_memstick_r.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Revise-logging-format-for-failed-CT-MIB-re.patch
