drm/mediatek: Add wait_event_timeout when disabling plane (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -54042,6 +54042,7 @@
 	patches.suse/Bluetooth-btintel-Check-if-controller-is-ISO-capable.patch
 	patches.suse/Bluetooth-hci_core-add-missing-braces-when-using-mac.patch
 	patches.suse/drm-nouveau-check-ioctl-command-codes-better.patch
+	patches.suse/drm-mediatek-Add-wait_event_timeout-when-disabling-p.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Revise-logging-format-for-failed-CT-MIB-re.patch
