--- a/series.conf
+++ b/series.conf
@@ -54041,6 +54041,7 @@
 	patches.suse/wifi-cfg80211-remove-scan-request-n_channels-counted.patch
 	patches.suse/Bluetooth-btintel-Check-if-controller-is-ISO-capable.patch
 	patches.suse/Bluetooth-hci_core-add-missing-braces-when-using-mac.patch
+	patches.suse/drm-nouveau-check-ioctl-command-codes-better.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Revise-logging-format-for-failed-CT-MIB-re.patch
