--- a/series.conf
+++ b/series.conf
@@ -10076,6 +10076,7 @@
 	patches.suse/Bluetooth-hci_core-add-missing-braces-when-using-mac.patch
 	patches.suse/Bluetooth-btusb-QCA-Fix-downloading-wrong-NVM-for-WC.patch
 	patches.suse/Bluetooth-L2CAP-Fix-attempting-to-adjust-outgoing-MT.patch
+	patches.suse/mmc-sdhci-pci-Quirk-for-broken-command-queuing-on-In.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Revise-logging-format-for-failed-CT-MIB-re.patch
