--- a/series.conf
+++ b/series.conf
@@ -10086,6 +10086,7 @@
 	patches.suse/drm-nouveau-check-ioctl-command-codes-better.patch
 	patches.suse/drm-amdgpu-gfx8-reset-compute-ring-wptr-on-the-GPU-o.patch
 	patches.suse/drm-mediatek-Add-wait_event_timeout-when-disabling-p.patch
+	patches.suse/drm-mediatek-only-announce-AFBC-if-really-supported.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Revise-logging-format-for-failed-CT-MIB-re.patch
