--- a/series.conf
+++ b/series.conf
@@ -10077,6 +10077,7 @@
 	patches.suse/Bluetooth-btusb-QCA-Fix-downloading-wrong-NVM-for-WC.patch
 	patches.suse/Bluetooth-L2CAP-Fix-attempting-to-adjust-outgoing-MT.patch
 	patches.suse/mmc-sdhci-pci-Quirk-for-broken-command-queuing-on-In.patch
+	patches.suse/mmc-sdhci_am654-Workaround-for-Errata-i2312.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Revise-logging-format-for-failed-CT-MIB-re.patch
