drm/nouveau: check ioctl command codes better (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -10083,6 +10083,7 @@
 	patches.suse/phy-tegra-xusb-Fix-unbalanced-regulator-disable-in-U.patch
 	patches.suse/dmaengine-nbpfaxi-Fix-memory-corruption-in-probe.patch
 	patches.suse/soundwire-amd-fix-for-clearing-command-status-regist.patch
+	patches.suse/drm-nouveau-check-ioctl-command-codes-better.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Revise-logging-format-for-failed-CT-MIB-re.patch
