drm/mediatek: Add wait_event_timeout when disabling plane (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -10085,6 +10085,7 @@
 	patches.suse/soundwire-amd-fix-for-clearing-command-status-regist.patch
 	patches.suse/drm-nouveau-check-ioctl-command-codes-better.patch
 	patches.suse/drm-amdgpu-gfx8-reset-compute-ring-wptr-on-the-GPU-o.patch
+	patches.suse/drm-mediatek-Add-wait_event_timeout-when-disabling-p.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Revise-logging-format-for-failed-CT-MIB-re.patch
