--- a/series.conf
+++ b/series.conf
@@ -33100,6 +33100,7 @@
 	patches.suse/thunderbolt-Fix-bit-masking-in-tb_dp_port_set_hops.patch
 	patches.suse/usb-musb-fix-gadget-state-on-disconnect.patch
 	patches.suse/usb-hub-Don-t-try-to-recover-devices-lost-during-war.patch
+	patches.suse/i2c-stm32-fix-the-device-used-for-the-DMA-map.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Revise-logging-format-for-failed-CT-MIB-re.patch
