--- a/series.conf
+++ b/series.conf
@@ -33088,6 +33088,7 @@
 	patches.suse/iio-accel-fxls8962af-Fix-use-after-free-in-fxls8962a.patch
 	patches.suse/iio-adc-ad7949-use-spi_is_bpw_supported.patch
 	patches.suse/comedi-Fail-COMEDI_INSNLIST-ioctl-if-n_insns-is-too-.patch
+	patches.suse/comedi-Fix-some-signed-shift-left-operations.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Revise-logging-format-for-failed-CT-MIB-re.patch
