--- a/series.conf
+++ b/series.conf
@@ -33085,6 +33085,7 @@
 	patches.suse/Input-xpad-set-correct-controller-type-for-Acer-NGR2.patch
 	patches.suse/regmap-fix-potential-memory-leak-of-regmap_bus.patch
 	patches.suse/iio-adc-stm32-adc-Fix-race-in-installing-chained-IRQ.patch
+	patches.suse/iio-accel-fxls8962af-Fix-use-after-free-in-fxls8962a.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Revise-logging-format-for-failed-CT-MIB-re.patch
