usb: hub: Don't try to recover devices lost during warm reset (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -33099,6 +33099,7 @@
 	patches.suse/thunderbolt-Fix-wake-on-connect-at-runtime.patch
 	patches.suse/thunderbolt-Fix-bit-masking-in-tb_dp_port_set_hops.patch
 	patches.suse/usb-musb-fix-gadget-state-on-disconnect.patch
+	patches.suse/usb-hub-Don-t-try-to-recover-devices-lost-during-war.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Revise-logging-format-for-failed-CT-MIB-re.patch
