pch_uart: Fix dma_sync_sg_for_device() nents value (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -33095,6 +33095,7 @@
 	patches.suse/comedi-das6402-Fix-bit-shift-out-of-bounds.patch
 	patches.suse/comedi-Fix-use-of-uninitialized-data-in-insn_rw_emul.patch
 	patches.suse/comedi-Fix-initialization-of-data-for-instructions-t.patch
+	patches.suse/pch_uart-Fix-dma_sync_sg_for_device-nents-value.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Revise-logging-format-for-failed-CT-MIB-re.patch
