--- a/series.conf
+++ b/series.conf
@@ -33090,6 +33090,7 @@
 	patches.suse/comedi-Fail-COMEDI_INSNLIST-ioctl-if-n_insns-is-too-.patch
 	patches.suse/comedi-Fix-some-signed-shift-left-operations.patch
 	patches.suse/comedi-das16m1-Fix-bit-shift-out-of-bounds.patch
+	patches.suse/comedi-pcl812-Fix-bit-shift-out-of-bounds.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Revise-logging-format-for-failed-CT-MIB-re.patch
