--- a/series.conf
+++ b/series.conf
@@ -33087,6 +33087,7 @@
 	patches.suse/iio-adc-stm32-adc-Fix-race-in-installing-chained-IRQ.patch
 	patches.suse/iio-accel-fxls8962af-Fix-use-after-free-in-fxls8962a.patch
 	patches.suse/iio-adc-ad7949-use-spi_is_bpw_supported.patch
+	patches.suse/comedi-Fail-COMEDI_INSNLIST-ioctl-if-n_insns-is-too-.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Revise-logging-format-for-failed-CT-MIB-re.patch
