--- a/series.conf
+++ b/series.conf
@@ -33086,6 +33086,7 @@
 	patches.suse/regmap-fix-potential-memory-leak-of-regmap_bus.patch
 	patches.suse/iio-adc-stm32-adc-Fix-race-in-installing-chained-IRQ.patch
 	patches.suse/iio-accel-fxls8962af-Fix-use-after-free-in-fxls8962a.patch
+	patches.suse/iio-adc-ad7949-use-spi_is_bpw_supported.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Revise-logging-format-for-failed-CT-MIB-re.patch
