Input: xpad - set correct controller type for Acer NGR200 (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -33082,6 +33082,7 @@
 	patches.suse/soundwire-amd-fix-for-clearing-command-status-regist.patch
 	patches.suse/drm-amdgpu-gfx8-reset-compute-ring-wptr-on-the-GPU-o.patch
 	patches.suse/hwmon-corsair-cpro-Validate-the-size-of-the-received.patch
+	patches.suse/Input-xpad-set-correct-controller-type-for-Acer-NGR2.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Revise-logging-format-for-failed-CT-MIB-re.patch
