--- a/series.conf
+++ b/series.conf
@@ -33092,6 +33092,7 @@
 	patches.suse/comedi-das16m1-Fix-bit-shift-out-of-bounds.patch
 	patches.suse/comedi-pcl812-Fix-bit-shift-out-of-bounds.patch
 	patches.suse/comedi-aio_iiro_16-Fix-bit-shift-out-of-bounds.patch
+	patches.suse/comedi-das6402-Fix-bit-shift-out-of-bounds.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Revise-logging-format-for-failed-CT-MIB-re.patch
