usb: musb: fix gadget state on disconnect (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -33098,6 +33098,7 @@
 	patches.suse/pch_uart-Fix-dma_sync_sg_for_device-nents-value.patch
 	patches.suse/thunderbolt-Fix-wake-on-connect-at-runtime.patch
 	patches.suse/thunderbolt-Fix-bit-masking-in-tb_dp_port_set_hops.patch
+	patches.suse/usb-musb-fix-gadget-state-on-disconnect.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Revise-logging-format-for-failed-CT-MIB-re.patch
