--- a/series.conf
+++ b/series.conf
@@ -33083,6 +33083,7 @@
 	patches.suse/drm-amdgpu-gfx8-reset-compute-ring-wptr-on-the-GPU-o.patch
 	patches.suse/hwmon-corsair-cpro-Validate-the-size-of-the-received.patch
 	patches.suse/Input-xpad-set-correct-controller-type-for-Acer-NGR2.patch
+	patches.suse/regmap-fix-potential-memory-leak-of-regmap_bus.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Revise-logging-format-for-failed-CT-MIB-re.patch
