--- a/series.conf
+++ b/series.conf
@@ -33097,6 +33097,7 @@
 	patches.suse/comedi-Fix-initialization-of-data-for-instructions-t.patch
 	patches.suse/pch_uart-Fix-dma_sync_sg_for_device-nents-value.patch
 	patches.suse/thunderbolt-Fix-wake-on-connect-at-runtime.patch
+	patches.suse/thunderbolt-Fix-bit-masking-in-tb_dp_port_set_hops.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Revise-logging-format-for-failed-CT-MIB-re.patch
