comedi: Fix use of uninitialized data in insn_rw_emulate_bits() (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -33093,6 +33093,7 @@
 	patches.suse/comedi-pcl812-Fix-bit-shift-out-of-bounds.patch
 	patches.suse/comedi-aio_iiro_16-Fix-bit-shift-out-of-bounds.patch
 	patches.suse/comedi-das6402-Fix-bit-shift-out-of-bounds.patch
+	patches.suse/comedi-Fix-use-of-uninitialized-data-in-insn_rw_emul.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Revise-logging-format-for-failed-CT-MIB-re.patch
