comedi: das16m1: Fix bit shift out of bounds (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -33089,6 +33089,7 @@
 	patches.suse/iio-adc-ad7949-use-spi_is_bpw_supported.patch
 	patches.suse/comedi-Fail-COMEDI_INSNLIST-ioctl-if-n_insns-is-too-.patch
 	patches.suse/comedi-Fix-some-signed-shift-left-operations.patch
+	patches.suse/comedi-das16m1-Fix-bit-shift-out-of-bounds.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Revise-logging-format-for-failed-CT-MIB-re.patch
