comedi: aio_iiro_16: Fix bit shift out of bounds (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -10103,6 +10103,7 @@
 	patches.suse/comedi-Fix-some-signed-shift-left-operations.patch
 	patches.suse/comedi-das16m1-Fix-bit-shift-out-of-bounds.patch
 	patches.suse/comedi-pcl812-Fix-bit-shift-out-of-bounds.patch
+	patches.suse/comedi-aio_iiro_16-Fix-bit-shift-out-of-bounds.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Revise-logging-format-for-failed-CT-MIB-re.patch
