pch_uart: Fix dma_sync_sg_for_device() nents value (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -10108,6 +10108,7 @@
 	patches.suse/comedi-Fix-use-of-uninitialized-data-in-insn_rw_emul.patch
 	patches.suse/comedi-Fix-initialization-of-data-for-instructions-t.patch
 	patches.suse/serial-core-fix-OF-node-leak.patch
+	patches.suse/pch_uart-Fix-dma_sync_sg_for_device-nents-value.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Revise-logging-format-for-failed-CT-MIB-re.patch
