iio: adc: stm32-adc: Fix race in installing chained IRQ handler (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -10092,6 +10092,7 @@
 	patches.suse/regmap-fix-potential-memory-leak-of-regmap_bus.patch
 	patches.suse/spi-Add-check-for-8-bit-transfer-with-8-IO-mode-supp.patch
 	patches.suse/iio-backend-fix-out-of-bound-write.patch
+	patches.suse/iio-adc-stm32-adc-Fix-race-in-installing-chained-IRQ.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Revise-logging-format-for-failed-CT-MIB-re.patch
