--- a/series.conf
+++ b/series.conf
@@ -10112,6 +10112,7 @@
 	patches.suse/thunderbolt-Fix-wake-on-connect-at-runtime.patch
 	patches.suse/thunderbolt-Fix-bit-masking-in-tb_dp_port_set_hops.patch
 	patches.suse/usb-musb-fix-gadget-state-on-disconnect.patch
+	patches.suse/usb-dwc2-gadget-Fix-enter-to-hibernation-for-UTMI-PH.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Revise-logging-format-for-failed-CT-MIB-re.patch
