--- a/series.conf
+++ b/series.conf
@@ -10097,6 +10097,7 @@
 	patches.suse/iio-accel-fxls8962af-Fix-use-after-free-in-fxls8962a.patch
 	patches.suse/iio-adc-ad7949-use-spi_is_bpw_supported.patch
 	patches.suse/interconnect-qcom-sc7280-Add-missing-num_links-to-xm.patch
+	patches.suse/interconnect-exynos-handle-node-name-allocation-fail.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Revise-logging-format-for-failed-CT-MIB-re.patch
