comedi: Fail COMEDI_INSNLIST ioctl if n_insns is too large (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -10099,6 +10099,7 @@
 	patches.suse/interconnect-qcom-sc7280-Add-missing-num_links-to-xm.patch
 	patches.suse/interconnect-exynos-handle-node-name-allocation-fail.patch
 	patches.suse/interconnect-icc-clk-destroy-nodes-in-case-of-memory.patch
+	patches.suse/comedi-Fail-COMEDI_INSNLIST-ioctl-if-n_insns-is-too-.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Revise-logging-format-for-failed-CT-MIB-re.patch
