--- a/series.conf
+++ b/series.conf
@@ -10098,6 +10098,7 @@
 	patches.suse/iio-adc-ad7949-use-spi_is_bpw_supported.patch
 	patches.suse/interconnect-qcom-sc7280-Add-missing-num_links-to-xm.patch
 	patches.suse/interconnect-exynos-handle-node-name-allocation-fail.patch
+	patches.suse/interconnect-icc-clk-destroy-nodes-in-case-of-memory.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Revise-logging-format-for-failed-CT-MIB-re.patch
