comedi: Fix some signed shift left operations (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -10100,6 +10100,7 @@
 	patches.suse/interconnect-exynos-handle-node-name-allocation-fail.patch
 	patches.suse/interconnect-icc-clk-destroy-nodes-in-case-of-memory.patch
 	patches.suse/comedi-Fail-COMEDI_INSNLIST-ioctl-if-n_insns-is-too-.patch
+	patches.suse/comedi-Fix-some-signed-shift-left-operations.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Revise-logging-format-for-failed-CT-MIB-re.patch
