--- a/series.conf
+++ b/series.conf
@@ -10090,6 +10090,7 @@
 	patches.suse/hwmon-corsair-cpro-Validate-the-size-of-the-received.patch
 	patches.suse/Input-xpad-set-correct-controller-type-for-Acer-NGR2.patch
 	patches.suse/regmap-fix-potential-memory-leak-of-regmap_bus.patch
+	patches.suse/spi-Add-check-for-8-bit-transfer-with-8-IO-mode-supp.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Revise-logging-format-for-failed-CT-MIB-re.patch
