regmap: fix potential memory leak of regmap_bus (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -10089,6 +10089,7 @@
 	patches.suse/drm-mediatek-only-announce-AFBC-if-really-supported.patch
 	patches.suse/hwmon-corsair-cpro-Validate-the-size-of-the-received.patch
 	patches.suse/Input-xpad-set-correct-controller-type-for-Acer-NGR2.patch
+	patches.suse/regmap-fix-potential-memory-leak-of-regmap_bus.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Revise-logging-format-for-failed-CT-MIB-re.patch
