Input: xpad - set correct controller type for Acer NGR200 (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -10088,6 +10088,7 @@
 	patches.suse/drm-mediatek-Add-wait_event_timeout-when-disabling-p.patch
 	patches.suse/drm-mediatek-only-announce-AFBC-if-really-supported.patch
 	patches.suse/hwmon-corsair-cpro-Validate-the-size-of-the-received.patch
+	patches.suse/Input-xpad-set-correct-controller-type-for-Acer-NGR2.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Revise-logging-format-for-failed-CT-MIB-re.patch
