--- a/series.conf
+++ b/series.conf
@@ -10101,6 +10101,7 @@
 	patches.suse/interconnect-icc-clk-destroy-nodes-in-case-of-memory.patch
 	patches.suse/comedi-Fail-COMEDI_INSNLIST-ioctl-if-n_insns-is-too-.patch
 	patches.suse/comedi-Fix-some-signed-shift-left-operations.patch
+	patches.suse/comedi-das16m1-Fix-bit-shift-out-of-bounds.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Revise-logging-format-for-failed-CT-MIB-re.patch
