--- a/series.conf
+++ b/series.conf
@@ -10114,6 +10114,7 @@
 	patches.suse/usb-musb-fix-gadget-state-on-disconnect.patch
 	patches.suse/usb-dwc2-gadget-Fix-enter-to-hibernation-for-UTMI-PH.patch
 	patches.suse/usb-hub-Don-t-try-to-recover-devices-lost-during-war.patch
+	patches.suse/i2c-stm32-fix-the-device-used-for-the-DMA-map.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Revise-logging-format-for-failed-CT-MIB-re.patch
