--- a/series.conf
+++ b/series.conf
@@ -10107,6 +10107,7 @@
 	patches.suse/comedi-das6402-Fix-bit-shift-out-of-bounds.patch
 	patches.suse/comedi-Fix-use-of-uninitialized-data-in-insn_rw_emul.patch
 	patches.suse/comedi-Fix-initialization-of-data-for-instructions-t.patch
+	patches.suse/serial-core-fix-OF-node-leak.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Revise-logging-format-for-failed-CT-MIB-re.patch
