iio: accel: fxls8962af: Fix use after free in fxls8962af_fifo_flush (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -10094,6 +10094,7 @@
 	patches.suse/iio-backend-fix-out-of-bound-write.patch
 	patches.suse/iio-adc-stm32-adc-Fix-race-in-installing-chained-IRQ.patch
 	patches.suse/iio-adc-axp20x_adc-Add-missing-sentinel-to-AXP717-AD.patch
+	patches.suse/iio-accel-fxls8962af-Fix-use-after-free-in-fxls8962a.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Revise-logging-format-for-failed-CT-MIB-re.patch
