--- a/series.conf
+++ b/series.conf
@@ -10109,6 +10109,7 @@
 	patches.suse/comedi-Fix-initialization-of-data-for-instructions-t.patch
 	patches.suse/serial-core-fix-OF-node-leak.patch
 	patches.suse/pch_uart-Fix-dma_sync_sg_for_device-nents-value.patch
+	patches.suse/thunderbolt-Fix-wake-on-connect-at-runtime.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Revise-logging-format-for-failed-CT-MIB-re.patch
