i2c: stm32f7: unmap DMA mapped buffer (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -10115,6 +10115,7 @@
 	patches.suse/usb-dwc2-gadget-Fix-enter-to-hibernation-for-UTMI-PH.patch
 	patches.suse/usb-hub-Don-t-try-to-recover-devices-lost-during-war.patch
 	patches.suse/i2c-stm32-fix-the-device-used-for-the-DMA-map.patch
+	patches.suse/i2c-stm32f7-unmap-DMA-mapped-buffer.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Revise-logging-format-for-failed-CT-MIB-re.patch
