--- a/series.conf
+++ b/series.conf
@@ -10093,6 +10093,7 @@
 	patches.suse/spi-Add-check-for-8-bit-transfer-with-8-IO-mode-supp.patch
 	patches.suse/iio-backend-fix-out-of-bound-write.patch
 	patches.suse/iio-adc-stm32-adc-Fix-race-in-installing-chained-IRQ.patch
+	patches.suse/iio-adc-axp20x_adc-Add-missing-sentinel-to-AXP717-AD.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Revise-logging-format-for-failed-CT-MIB-re.patch
