--- a/series.conf
+++ b/series.conf
@@ -50369,6 +50369,7 @@
 	patches.suse/bpf-copy_verifier_state-should-copy-loop_entry-field.patch
 	patches.suse/bpf-abort-verification-if-env-cur_state-loop_entry-N.patch
 	patches.suse/x86-speculation-Remove-the-extra-ifdef-around-CALL_NOSPEC.patch
+	patches.suse/net-usb-usbnet-restore-usb-d-name-exception-for-loca.patch
 	patches.suse/mptcp-fix-NULL-pointer-in-can_accept_new_subflow.patch
 	patches.suse/net-fix-geneve_opt-length-integer-overflow.patch
 	patches.suse/netfilter-nft_tunnel-fix-geneve_opt-type-confusion-additio.patch
