PCI: hv: Don't load the driver for baremetal root partition (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -10046,6 +10046,7 @@
 	patches.suse/msft-hv-3291-clocksource-hyper-v-Fix-warnings-for-missing-export..patch
 	patches.suse/msft-hv-3292-PCI-hv-Fix-warnings-for-missing-export.h-header-incl.patch
 	patches.suse/msft-hv-3293-net-mana-Fix-warnings-for-missing-export.h-header-in.patch
+	patches.suse/msft-hv-3294-PCI-hv-Don-t-load-the-driver-for-baremetal-root-part.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Revise-logging-format-for-failed-CT-MIB-re.patch
