x86/hyperv: Clean up hv_map/unmap_interrupt() return values (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -10048,6 +10048,7 @@
 	patches.suse/msft-hv-3293-net-mana-Fix-warnings-for-missing-export.h-header-in.patch
 	patches.suse/msft-hv-3294-PCI-hv-Don-t-load-the-driver-for-baremetal-root-part.patch
 	patches.suse/msft-hv-3295-x86-hyperv-Fix-usage-of-cpu_online_mask-to-get-valid.patch
+	patches.suse/msft-hv-3296-x86-hyperv-Clean-up-hv_map-unmap_interrupt-return-va.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Revise-logging-format-for-failed-CT-MIB-re.patch
