Drivers: hv: Fix warnings for missing export.h header inclusion (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -10041,6 +10041,7 @@
 	patches.suse/msft-hv-3286-Drivers-hv-Select-CONFIG_SYSFB-only-if-EFI-is-enable.patch
 	patches.suse/msft-hv-3287-tools-hv-fcopy-Fix-incorrect-file-path-conversion.patch
 	patches.suse/msft-hv-3288-Drivers-hv-Fix-the-check-for-HYPERVISOR_CALLBACK_VEC.patch
+	patches.suse/msft-hv-3289-Drivers-hv-Fix-warnings-for-missing-export.h-header-.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Revise-logging-format-for-failed-CT-MIB-re.patch
