--- a/series.conf
+++ b/series.conf
@@ -10052,6 +10052,7 @@
 	patches.suse/msft-hv-3297-Drivers-hv-Use-nested-hypercall-for-post-message-and.patch
 	patches.suse/msft-hv-3298-x86-hyperv-Expose-hv_map_msi_interrupt.patch
 	patches.suse/msft-hv-3299-PCI-hv-Use-the-correct-hypercall-for-unmasking-inter.patch
+	patches.suse/msft-hv-3300-tools-hv-fcopy-Fix-irregularities-with-size-of-ring-.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Revise-logging-format-for-failed-CT-MIB-re.patch
