--- a/series.conf
+++ b/series.conf
@@ -10038,6 +10038,7 @@
 	patches.suse/soc-aspeed-lpc-snoop-Cleanup-resources-in-stack-orde.patch
 	patches.suse/soc-aspeed-lpc-snoop-Don-t-disable-channels-that-are.patch
 	patches.suse/msft-hv-3301-hv_netvsc-Set-VF-priv_flags-to-IFF_NO_ADDRCONF-befor.patch
+	patches.suse/msft-hv-3286-Drivers-hv-Select-CONFIG_SYSFB-only-if-EFI-is-enable.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Revise-logging-format-for-failed-CT-MIB-re.patch
