--- a/series.conf
+++ b/series.conf
@@ -10047,6 +10047,7 @@
 	patches.suse/msft-hv-3292-PCI-hv-Fix-warnings-for-missing-export.h-header-incl.patch
 	patches.suse/msft-hv-3293-net-mana-Fix-warnings-for-missing-export.h-header-in.patch
 	patches.suse/msft-hv-3294-PCI-hv-Don-t-load-the-driver-for-baremetal-root-part.patch
+	patches.suse/msft-hv-3295-x86-hyperv-Fix-usage-of-cpu_online_mask-to-get-valid.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Revise-logging-format-for-failed-CT-MIB-re.patch
