--- a/series.conf
+++ b/series.conf
@@ -10050,6 +10050,7 @@
 	patches.suse/msft-hv-3295-x86-hyperv-Fix-usage-of-cpu_online_mask-to-get-valid.patch
 	patches.suse/msft-hv-3296-x86-hyperv-Clean-up-hv_map-unmap_interrupt-return-va.patch
 	patches.suse/msft-hv-3297-Drivers-hv-Use-nested-hypercall-for-post-message-and.patch
+	patches.suse/msft-hv-3298-x86-hyperv-Expose-hv_map_msi_interrupt.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Revise-logging-format-for-failed-CT-MIB-re.patch
