--- a/series.conf
+++ b/series.conf
@@ -10044,6 +10044,7 @@
 	patches.suse/msft-hv-3289-Drivers-hv-Fix-warnings-for-missing-export.h-header-.patch
 	patches.suse/msft-hv-3290-x86-hyperv-Fix-warnings-for-missing-export.h-header-.patch
 	patches.suse/msft-hv-3291-clocksource-hyper-v-Fix-warnings-for-missing-export..patch
+	patches.suse/msft-hv-3292-PCI-hv-Fix-warnings-for-missing-export.h-header-incl.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Revise-logging-format-for-failed-CT-MIB-re.patch
