--- a/series.conf
+++ b/series.conf
@@ -10040,6 +10040,7 @@
 	patches.suse/msft-hv-3301-hv_netvsc-Set-VF-priv_flags-to-IFF_NO_ADDRCONF-befor.patch
 	patches.suse/msft-hv-3286-Drivers-hv-Select-CONFIG_SYSFB-only-if-EFI-is-enable.patch
 	patches.suse/msft-hv-3287-tools-hv-fcopy-Fix-incorrect-file-path-conversion.patch
+	patches.suse/msft-hv-3288-Drivers-hv-Fix-the-check-for-HYPERVISOR_CALLBACK_VEC.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Revise-logging-format-for-failed-CT-MIB-re.patch
