rcu-tasks: Add data to eliminate RCU-tasks/do_exit() (bsc#1246298)

--- a/series.conf
+++ b/series.conf
@@ -22307,6 +22307,7 @@
 	patches.suse/nvme-clear-caller-pointer-on-identify-failure.patch
 	patches.suse/rcu-exp-Fix-RCU-expedited-parallel-grace-period-kwor.patch
 	patches.suse/rcu-exp-Handle-RCU-expedited-grace-period-kworker-al.patch
+	patches.suse/rcu-tasks-Add-data-to-eliminate-RCU-tasks-do_exit-de.patch
 	patches.suse/workqueue-Add-rcu-lock-check-at-the-end-of-work-item-execution.patch
 	patches.suse/timekeeping-Fix-cross-timestamp-interpolation-on-cou.patch
 	patches.suse/timekeeping-Fix-cross-timestamp-interpolation-corner.patch
