--- a/series.conf
+++ b/series.conf
@@ -22308,6 +22308,7 @@
 	patches.suse/rcu-exp-Fix-RCU-expedited-parallel-grace-period-kwor.patch
 	patches.suse/rcu-exp-Handle-RCU-expedited-grace-period-kworker-al.patch
 	patches.suse/rcu-tasks-Add-data-to-eliminate-RCU-tasks-do_exit-de.patch
+	patches.suse/rcu-tasks-Initialize-callback-lists-at-rcu_init-time.patch
 	patches.suse/workqueue-Add-rcu-lock-check-at-the-end-of-work-item-execution.patch
 	patches.suse/timekeeping-Fix-cross-timestamp-interpolation-on-cou.patch
 	patches.suse/timekeeping-Fix-cross-timestamp-interpolation-corner.patch
