kABI fix after KVM: SVM: Fix SNP AP destroy race with VMRUN (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -10648,6 +10648,7 @@
 	patches.kabi/bpf-Do-not-include-stack-ptr-register-in-precision-b.patch
 	patches.kabi/drm_framebuffer-kabi-workaround.patch
 	patches.kabi/bluetooth-hci_dev-kabi-workaround.patch
+	patches.kabi/KVM-SVM-Fix-SNP-AP-destroy-race-with-VMRUN.patch
 
 	########################################################
 	# preempt-rt backport converged
