--- a/series.conf
+++ b/series.conf
@@ -10056,6 +10056,7 @@
 	patches.suse/pwm-mediatek-Ensure-to-disable-clocks-in-error-path.patch
 	patches.suse/pinctrl-qcom-msm-mark-certain-pins-as-invalid-for-in.patch
 	patches.suse/pinctrl-amd-Clear-GPIO-debounce-for-suspend.patch
+	patches.suse/KVM-SVM-Reject-SEV-ES-intra-host-migration-if-vCPU-c.patch
 	patches.suse/net-phy-qcom-move-the-WoL-function-to-shared-library.patch
 	patches.suse/net-phy-qcom-qca808x-Fix-WoL-issue-by-utilizing-at80.patch
 	patches.suse/Bluetooth-hci_sync-Fix-not-disabling-advertising-ins.patch
