--- a/series.conf
+++ b/series.conf
@@ -10057,6 +10057,7 @@
 	patches.suse/pinctrl-qcom-msm-mark-certain-pins-as-invalid-for-in.patch
 	patches.suse/pinctrl-amd-Clear-GPIO-debounce-for-suspend.patch
 	patches.suse/KVM-SVM-Reject-SEV-ES-intra-host-migration-if-vCPU-c.patch
+	patches.suse/KVM-x86-xen-Allow-out-of-range-event-channel-ports-i.patch
 	patches.suse/net-phy-qcom-move-the-WoL-function-to-shared-library.patch
 	patches.suse/net-phy-qcom-qca808x-Fix-WoL-issue-by-utilizing-at80.patch
 	patches.suse/Bluetooth-hci_sync-Fix-not-disabling-advertising-ins.patch
