iommu/vt-d: Fix system hang on reboot -f (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -7033,6 +7033,7 @@
 	patches.suse/scsi-lpfc-Restore-clearing-of-NLP_UNREG_INP-in-ndlp-nlp_fl.patch
 	patches.suse/scsi-st-ERASE-does-not-change-tape-location.patch
 	patches.suse/scsi-st-Tighten-the-page-format-heuristics-with-MODE-SELEC.patch
+	patches.suse/iommu-vt-d-Fix-system-hang-on-reboot-f.patch
 	patches.suse/iommu-amd-Fix-header-file
 	patches.suse/iommu-amd-Introduce-generic-function-to-set-multibit-feature-val
 	patches.suse/iommu-amd-Replace-slab-cache-allocator-with-page-allocator
