KVM: TDX: Add new TDVMCALL status code for unsupported subfuncs (jsc#PED-13302).

--- a/series.conf
+++ b/series.conf
@@ -9887,6 +9887,7 @@
 	patches.suse/ACPICA-Refuse-to-evaluate-a-method-if-arguments-are-.patch
 	patches.suse/nfsd-use-threads-array-as-is-in-netlink-interface.patch
 	patches.suse/sunrpc-handle-SVC_GARBAGE-during-svc-auth-processing-as-auth-error.patch
+	patches.suse/KVM-TDX-Add-new-TDVMCALL-status-code-for-unsupported.patch
 	patches.suse/perf-Fix-sample-vs-do_exit.patch
 	patches.suse/perf-Fix-cgroup-state-vs-ERROR.patch
 	patches.suse/perf-Fix-dangling-cgroup-pointer-in-cpuctx.patch
