--- a/series.conf
+++ b/series.conf
@@ -9888,6 +9888,7 @@
 	patches.suse/nfsd-use-threads-array-as-is-in-netlink-interface.patch
 	patches.suse/sunrpc-handle-SVC_GARBAGE-during-svc-auth-processing-as-auth-error.patch
 	patches.suse/KVM-TDX-Add-new-TDVMCALL-status-code-for-unsupported.patch
+	patches.suse/KVM-TDX-Handle-TDG.VP.VMCALL-GetQuote.patch
 	patches.suse/perf-Fix-sample-vs-do_exit.patch
 	patches.suse/perf-Fix-cgroup-state-vs-ERROR.patch
 	patches.suse/perf-Fix-dangling-cgroup-pointer-in-cpuctx.patch
