KVM: TDX: Exit to userspace for GetTdVmCallInfo (jsc#PED-13302).

--- a/series.conf
+++ b/series.conf
@@ -9889,6 +9889,7 @@
 	patches.suse/sunrpc-handle-SVC_GARBAGE-during-svc-auth-processing-as-auth-error.patch
 	patches.suse/KVM-TDX-Add-new-TDVMCALL-status-code-for-unsupported.patch
 	patches.suse/KVM-TDX-Handle-TDG.VP.VMCALL-GetQuote.patch
+	patches.suse/KVM-TDX-Exit-to-userspace-for-GetTdVmCallInfo.patch
 	patches.suse/perf-Fix-sample-vs-do_exit.patch
 	patches.suse/perf-Fix-cgroup-state-vs-ERROR.patch
 	patches.suse/perf-Fix-dangling-cgroup-pointer-in-cpuctx.patch
