KVM: VMX: Ensure unused kvm_tdx_capabilities fields are zeroed out (jsc#PED-13302).

--- a/series.conf
+++ b/series.conf
@@ -10139,6 +10139,7 @@
 	patches.suse/drm-mediatek-Add-wait_event_timeout-when-disabling-p.patch
 	patches.suse/drm-mediatek-only-announce-AFBC-if-really-supported.patch
 	patches.suse/KVM-x86-Reject-KVM_SET_TSC_KHZ-vCPU-ioctl-for-TSC-pr.patch
+	patches.suse/KVM-VMX-Ensure-unused-kvm_tdx_capabilities-fields-ar.patch
 	patches.suse/hwmon-corsair-cpro-Validate-the-size-of-the-received.patch
 	patches.suse/Input-xpad-set-correct-controller-type-for-Acer-NGR2.patch
 	patches.suse/regmap-fix-potential-memory-leak-of-regmap_bus.patch
