kABI fix after Add TDX support for vSphere (jsc#PED-13302).

--- a/series.conf
+++ b/series.conf
@@ -10659,6 +10659,7 @@
 	patches.kabi/drm_framebuffer-kabi-workaround.patch
 	patches.kabi/bluetooth-hci_dev-kabi-workaround.patch
 	patches.kabi/KVM-SVM-Fix-SNP-AP-destroy-race-with-VMRUN.patch
+	patches.kabi/kabi-fix-Add-TDX-support-for-vSphere.patch
 
 	########################################################
 	# preempt-rt backport converged
