gpiolib: cdev: Ignore reconfiguration without direction (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -26090,6 +26090,7 @@
 	patches.suse/gpio-pca953x-fix-pca953x_irq_bus_sync_unlock-race.patch
 	patches.suse/gpio-davinci-Validate-the-obtained-number-of-IRQs.patch
 	patches.suse/gpiolib-cdev-Disallow-reconfiguration-without-direct.patch
+	patches.suse/gpiolib-cdev-Ignore-reconfiguration-without-direction.patch
 	patches.suse/nvme-fix-NVME_NS_DEAC-may-incorrectly-identifying-th.patch
 	patches.suse/nvmet-do-not-return-reserved-for-empty-TSAS-values.patch
 	patches.suse/nvme-fixup-comment-for-nvme-RDMA-Provider-Type.patch
