gpiolib: Handle no pin_ranges in gpiochip_generic_config() (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -21863,6 +21863,7 @@
 	patches.suse/md-Don-t-register-sync_thread-for-reshape-directly-ad39.patch
 	patches.suse/md-Don-t-suspend-the-array-for-interrupted-reshape-9e46.patch
 	patches.suse/block-sed-opal-handle-empty-atoms-when-parsing-respo.patch
+	patches.suse/gpiolib-Handle-no-pin_ranges-in-gpiochip_generic_config.patch
 	patches.suse/ata-libata-core-Do-not-try-to-set-sleeping-devices-t.patch
 	patches.suse/ahci-asm1064-correct-count-of-reported-ports.patch
 	patches.suse/ata-ahci_ceva-fix-error-handling-for-Xilinx-GT-PHY-s.patch
