gpiolib: acpi: Fix failed in acpi_gpiochip_find() by adding parent node match (bsc#1233300).

--- a/series.conf
+++ b/series.conf
@@ -25407,6 +25407,7 @@
 	patches.suse/Avoid-hw_desc-array-overrun-in-dw-axi-dmac.patch
 	patches.suse/dmaengine-idxd-Avoid-unnecessary-destruction-of-file.patch
 	patches.suse/soundwire-cadence-fix-invalid-PDI-offset.patch
+	patches.suse/gpiolib-acpi-Fix-failed-in-acpi_gpiochip_find-by-add.patch
 	patches.suse/thermal-drivers-mediatek-lvts_thermal-Check-NULL-ptr.patch
 	patches.suse/ACPI-EC-Install-address-space-handler-at-the-namespa.patch
 	patches.suse/cpufreq-amd-pstate-fix-memory-leak-on-CPU-EPP-exit.patch
