gpiolib: Fix debug messaging in gpiod_find_and_request() (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -23876,6 +23876,7 @@
 	patches.suse/mmc-sdhci-omap-re-tuning-is-needed-after-a-pm-transi.patch
 	patches.suse/sdhci-of-dwcmshc-disable-PM-runtime-in-dwcmshc_remov.patch
 	patches.suse/gpio-cdev-sanitize-the-label-before-requesting-the-i.patch
+	patches.suse/gpiolib-Fix-debug-messaging-in-gpiod_find_and_request.patch
 	patches.suse/dm-integrity-fix-out-of-range-warning.patch
 	patches.suse/x86-efistub-Add-missing-boot_params-for-mixed-mode-compat-.patch
 	patches.suse/ACPICA-debugger-check-status-of-acpi_evaluate_object.patch
